# twidder/api/v1/posts.py
@@ -1,7 +1,7 @@
 import datetime
 import http
 
-from flask import jsonify, Blueprint, request
+from flask import jsonify, Blueprint, request, current_app
 
 from twidder import database_handler
 from twidder import util
@@ -14,11 +14,17 @@ blueprint = Blueprint('posts', __name__)
 @util.post_parameters(("message", str), ("email", str))
 def create_post(user_email: str, message: str, email: str):
     """Create a new post."""
+
+    # parse optional parameter 'media'
+    media = None
+    if "media" in (body := request.get_json()):
+        media = body["media"]
+
     if database_handler.get_user_by_email(email) is None:
         return jsonify({"message": "user doesn't exist"}), http.HTTPStatus.FORBIDDEN
 
     curr_datetime = datetime.datetime.now(datetime.timezone.utc)
-    post_id = database_handler.create_post(user_email, email, message, curr_datetime, curr_datetime)
+    post_id = database_handler.create_post(user_email, email, message, curr_datetime, curr_datetime, media)
     if post_id == -1:
         return jsonify({"message": "couldn't create a new post"}), http.HTTPStatus.INTERNAL_SERVER_ERROR
     return jsonify({"message": "post successfully created", "id": post_id}), http.HTTPStatus.CREATED
@@ -46,7 +52,8 @@ def list_posts(user_email: str):
                 "user": post["user"],
                 "content": post["content"],
                 "created": post["created"],
-                "edited": post["edited"]
+                "edited": post["edited"],
+                "media": post["media"],
 
             } for post in posts
         ]
@@ -54,22 +61,37 @@ def list_posts(user_email: str):
 
 
 @blueprint.route("/<string:post_id>", methods=["PATCH"])
-@util.patch_parameters(("message", str))
 @util.authorize_user
-def update_post(user_email: str, message: str, post_id: str):
+def update_post(user_email: str, post_id: str):
     """Update a post."""
-    if message is None:
-        return jsonify({"message": "`message` parameter is missing"}), http.HTTPStatus.BAD_REQUEST
-    if message == "":
-        return jsonify({"message": "message must not be empty"}), http.HTTPStatus.FORBIDDEN
+
+    # get request body
+    body = request.get_json()
+    if "message" not in body and "media" not in body:
+        return jsonify({"message": "nor 'message' or 'media' parameters are provided"}), http.HTTPStatus.BAD_REQUEST
+
+    # get post
     post = database_handler.get_post_by_id(post_id)
     if post is None:
         return jsonify({"message": "post not found"}), http.HTTPStatus.NOT_FOUND
     if post["author"] != user_email:
         return jsonify({"message": "you can update only your posts"}), http.HTTPStatus.FORBIDDEN
-    curr_datetime = datetime.datetime.now(datetime.timezone.utc)
-    post["content"] = message
-    post["edited"] = curr_datetime
+
+    # update message
+    if "message" in body:
+        message = body["message"]
+        if message == "":
+            return jsonify({"message": "message must not be empty"}), http.HTTPStatus.FORBIDDEN
+        post["content"] = message
+
+    # update media
+    if "media" in body:
+        post["media"] = body["media"]
+
+    # update edited time
+    post["edited"] = datetime.datetime.now(datetime.timezone.utc)
+
+    # commit changes to the database
     if not database_handler.update_post_by_id(
             post["id"],
             post["author"],
@@ -77,6 +99,7 @@ def update_post(user_email: str, message: str, post_id: str):
             post["content"],
             post["created"],
             post["edited"],
+            post["media"],
     ):
         return jsonify({"message": "couldn't update post"}), http.HTTPStatus.INTERNAL_SERVER_ERROR
     return jsonify({"message": "post successfully updated"}), http.HTTPStatus.OK
